# pytesis-memfce

./: .gitignore  .pre-commit-config.yaml  README.md  exploration.ipynb  pyproject.toml
exploration/: Hyperparams.ipynb  Intervals-working.ipynb  Power-working.ipynb  real_data.ipynb
informe/: .Rprofile  _quarto.yml  abstract-EN.qmd  abstract.qmd  conclusion.qmd  intro-fermat.qmd  intro-intervalos.qmd  intro-tda.qmd  main.qmd  methods.ipynb  methods.qmd  resumen-latex.tex  simulations.qmd
informe/cache_runs/: cache.db
informe/latex/: caratula-plan.tex  caratula.tex  references.bib
presentacion/: conceptos.typ  conclusiones.typ  datos.typ  desarrollo.typ  intro.typ  main.typ  problema.typ  resultados.typ  slides.typ
pytesis/: datasets.py  fermat.py  intervals.py  power.py  results.py  tda.py  utils.py
