[tool.poetry]
name = "pytesis"
version = "0.1.0"
description = ""
authors = ["diegobatt <diegobatt@diegobatt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.2"
pandas = "^2.0.3"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
gudhi = "^3.8.0"
scikit-learn = "^1.3.0"
networkx = "^3.1"
seaborn = "^0.12.2"
diskcache = "^5.6.3"
nbconvert = "^7.16.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
jupyterlab = "^4.0.4"
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
